tests/ui/pass/fn_poly.rs
//@check-pass

fn left<T, U>(x: (T, U)) -> T {
    x.0
}

fn main() {
    assert!(left((42, 0)) == 42);
}
